--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
 			<div class="container">
 				<div class="subscribe-title text-center">
 					<h2>
-						do you want to add your business listing with us?
+						do you want to add your  listing with us?
 					</h2>
 					<p>
 						Listrace offer you to list your business with us and we very much able to promote your Business.
